@@ -605,7 +605,11 @@ function graphs() {
 		foreach ($snmp_queries as $snmp_query) {
 			unset($total_rows);
 
-			$page = $_REQUEST["page" . $snmp_query["id"]];
+			if (!$changed) {
+				$page = $_REQUEST["page" . $snmp_query["id"]];
+			}else{
+				$page = 1;
+			}
 
 			$xml_array = get_data_query_array($snmp_query["id"]);
 
@@ -762,7 +766,7 @@ function graphs() {
 
 					$total_rows = sizeof(db_fetch_assoc($rows_query));
 
-					if (($page-1) * $row_limit > $total_rows) {
+					if (($page) * $row_limit > $total_rows) {
 						$page = 1;
 						$_REQUEST["page" . $query["id"]] = $page;
 						load_current_session_value("page" . $query["id"], "sess_graphs_new_page" . $query["id"], "1");
